[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "FastAPI starter with JWT auth, SQLModel, tests, Docker and CI"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras=["standard"], version="0.22.0"}
sqlmodel = "^0.0.8"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
